# scigma

./: .gitignore  README.md
scigma/: TODO  __init__.py  continuation.py  equations.py  forgotten.py  graphs.py  guessing.py  iteration.py  library.py  manifolds.py  maxpts.py  old_commands.py  old_cppwrapper.py  options.py  picking.py  style.py  sweeping.py  test.py  view.py  window.py
scigma/common/: blob.py  log.py  util.py
scigma/dat/: mesh.py  wave.py
scigma/gui/: __init__.py  application.py  atwpanel.py  bundle.py  console.py  glwindow.py  sheet.py
scigma/num/: __init__.py  gsortho.py
source/: CMakeLists.txt  CMakeLists.txt_OBJECTS
source/common/: CMakeLists.txt  blob.cpp  events.hpp  log.cpp  log.hpp  logwrapper.cpp  pythonobject.hpp  util.cpp  util.hpp
source/common/test/: log_test.cpp
source/dat/: CMakelists.txt  datwrapper.cpp  mesh.cpp  mesh.hpp  wave.hpp
source/dat/test/: CMakeLists.txt  mesh_test.cpp  wave_test.cpp
source/gui/: CMakeLists.txt  CMakeLists.txt_OBJECTS  application.cpp  application.hpp  applicationwrapper.cpp  bundle.cpp  bundle.hpp  bundleshaders.hpp  console.cpp  console.hpp  consolewrapper.cpp  cosy.cpp  cosy.hpp  definitions.hpp  drawable.hpp  drawabletypes.hpp  events.hpp  glbuffer.hpp  glcontext.cpp  glcontext.hpp  glutil.hpp  glwindow.cpp  glwindow.hpp  glwindowevents.hpp  glwindowwrapper.cpp  graph.cpp  graph.hpp  graphwrapper.cpp  navigator.cpp  picker.cpp  picker.hpp  ruler.cpp  ruler.hpp  screentext.cpp  sheet.cpp  sheet.hpp  sheetshaders.hpp  spacetext.cpp  viewingarea.cpp  viewingarea.hpp  (+1 more)
source/gui/test/: CMakeLists.txt  application_test.cpp  bundletest.hpp  guivtest.cpp  sheettest.hpp
source/num/: CMakeLists.txt  CMakeLists.txt_OBJECTS  auto.cpp  continuationwrapper.cpp  eigen.cpp  equationsystem.cpp  equationsystem.hpp  equationsystemwrapper.cpp  externalequationsystem.cpp  externalequationsystem.hpp  function.cpp  function.hpp  guessing.cpp  guessing.hpp  guessingwrapper.cpp  integrationstepper.cpp  integrationstepper.hpp  internalequationsystem.cpp  internalequationsystem.hpp  internalodessastepper.cpp  internalodessastepper.hpp  iteration.hpp  iterationwrapper.cpp  manifoldwrapper.cpp  mapmanifoldstepper.cpp  mapstepper.cpp  mapstepper.hpp  newton.cpp  odessa.cpp  odessa.hpp  stepper.hpp  sweeping.cpp  task.cpp  task.hpp
source/num/test/: CMakeLists.txt  externalequationsystem_shared.cpp  externalequationsystem_test.cpp  externalequationsystem_test_p.cpp  externalequationsystem_test_pt.cpp  externalequationsystem_test_t.cpp  internalequationsystem_test.cpp  internalequationsystem_test.hpp  mapstepper_test.cpp  odessa_test.cpp
